# pgyerAppManager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  release2.yml  rust.yml
src/: lib.rs  main.rs
