[package]
name = "pgyer-uploader"
version = "0.1.0"
edition = "2021"
description = "A tool to upload ipa/apk to pgyer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
clap = "2.33"
reqwest = { version = "0.11", features = ["json","multipart"] }
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.15"
chrono = "0.4"